Spacing fix

--- a/src/assets/css/base/_typography.css
+++ b/src/assets/css/base/_typography.css
@@ -49,7 +49,9 @@ p, ul, ol, dl {
   margin-bottom: 16px;
 }
 
-p + ul {
+p + h2,
+p + h3 {
+  margin-top: 32px;
 }
 
 ul,ol {
